@@ -42,14 +42,23 @@ dependencies {
 	api(project(":jenetics"))
 	api(project(":jenetics.ext"))
 	api(project(":jenetics.prog"))
-	implementation("com.fasterxml.jackson.core:jackson-databind:2.14.0")
-	implementation(libs.commons.math)
+	implementation(libs.commons.math4)
+	implementation(libs.commons.statistics.distribution)
+	implementation(libs.jackson.annotations)
+	implementation(libs.swagger.parser)
+	implementation(libs.swagger.models)
 
+
+	testImplementation(libs.codemodel)
 	testImplementation(libs.assertj)
+	testImplementation(libs.commons.numbers.combinatorics)
+	testImplementation(libs.commons.numbers.gamma)
 	testImplementation(libs.equalsverifier)
 	testImplementation(libs.guava)
-	testImplementation(libs.testng)
+	testImplementation(libs.jackson.databind)
 	testImplementation(libs.jpx)
+	testImplementation(libs.reactor.core)
+	testImplementation(libs.testng)
 
 	jmh(libs.commons.csv)
 	jmh(libs.javacsv)
@@ -60,8 +69,14 @@ dependencies {
 tasks.test { dependsOn(tasks.compileJmhJava) }
 
 jmh {
-	includes.add(".*CsvSupportPerf.*")
+	includes.add(".*ErfcPerf.*")
 }
+
+/*
+tasks.withType<JavaCompile> {
+	options.compilerArgs.add("--add-modules ALL-MODULE-PATH")
+}
+*/
 
 tasks.javadoc {
 	val doclet = options as StandardJavadocDocletOptions
